--- a/elenco.html
+++ b/elenco.html
@@ -41,7 +41,7 @@
             <h1>Elenco</h1>
             <br><br>
             <div class="linha-horizontal"></div>
-            <img class="imagemThomas" src="./imagens/thomas.jpg" alt="imagem thomas">
+            <img class="imagemThomas" src="./imagens/elenco/cillian.jpg" alt="imagem thomas">
             <h2>Thomas Shelby (Cillian Murphy)</h2>
             <p>Thomas Shelby é o patriarca da Família Shelby, a família mafiosa envolvida com bebidas, apostas e a gangue criminosa conhecida como Peaky Blinders. Um veterano da Primeira Guerra Mundial, ele é bastante pragmático e pé-no-chão, sempre interessado em aumentar seu poder e melhorar a situação de sua família. Mas Thomas Shelby também tem um lado sensível, marcado por uma vida de traumas e desilusões.
                 Quem o interpreta na série é Cillian Murphy. Nascido na Irlanda em 1976, ele se tornou um dos rostos mais conhecidos do Reino Unido por estrelar obras como Extermínio (2002), Dias Selvagens (2003), Voo Noturno (2005), Um Lugar Silencioso - Parte 2 (2021), entre muitos outros - além de ser presença constante nos filmes de Christopher Nolan, tendo aparecido na Trilogia Batman, A Origem (2010) e Dunkirk (2017).
@@ -49,7 +49,7 @@
             </p>
             <br><br><br><br><br><br><br>
 
-            <img  class="imagemArthur" src="./imagens/arthur2.jpg" alt="imagem arthur">
+            <img  class="imagemArthur" src="./imagens/elenco/paul anderson.jpg" alt="imagem arthur">
             <h2 class="arthur">Arthur Shelby Jr. (Paul Anderson)</h2>
             <p>Carismático e briguento, Arthur Shelby é praticamente um hooligan, sempre criando algum tipo de confusão, e louco para sair na mão com alguém. Ele é parte do alto escalão dos Peaky Blinders, e seu talento para violência serve tanto para ajudar a intimidar em negociações tensas, quanto para complicar a vida do irmão Thomas Shelby e dos demais, já que constantemente toma decisões impulsivas.
                 Arthur Shelby Jr. é interpretado por Paul Anderson. Ainda que o personagem seja mais velho que Thomas Shelby, o ator é um pouco mais novo que Cillian Murphy, tendo nascido em 1978, na cidade de Londres, Inglaterra. Peaky Blinders é seu papel de maior destaque, mas Paul Anderson tem algumas outras participações em produções britânicas, como nos filmes Sherlock Holmes: O Jogo de Sombras (2011), Robin Hood: A Origem (2018) e Vingança FM (2019), além de pequenas pontas em séries como Doctor Who e Os Assassinatos de Midsomer.
@@ -57,14 +57,14 @@
             
             <br><br><br><br><br><br><br>
 
-            <img class="imagemJhon" src="./imagens/jhon.jpg" alt="imagem jhon">
+            <img class="imagemJhon" src="./imagens/elenco/joe cole.jpg" alt="imagem jhon">
             <h2>John Shelby (Joe Cole)</h2>
             <p>O terceiro irmão Shelby combina características de Thomas e de Arthur: John Shelby é estrategista o bastante para conseguir lidar com a administração da organização criminosa, mas também é violento e impulsivo para constantemente comprar brigas, especialmente com a polícia e outras gangues.
                 Ele é vivido pelo ator inglês Joe Cole, cuja carreira inclui breves participações em séries como Skins, The Thick of It e Black Mirror, além de papéis de destaque em filmes como Sala Verde (2015) e Prece ao Nascer do Dia (2017).</p>
 
             <br><br><br><br><br><br><br><br><br>
 
-            <img class="imagemPolly" src="./imagens/polly.jpg" alt="imagem polly">
+            <img class="imagemPolly" src="./imagens/elenco/polly.jpg" alt="imagem polly">
             <h2>Polly Gray (Helen McCrory)</h2>
             <p>
                 Após os irmãos Shelby terem sido abandonados pelo pai (em razão da morte da mãe), foi a tia Polly Gray quem assumiu a tarefa de criar os meninos. Assim, ela se tornou a principal figura materna de Thomas, Arthur, Finn, John e Ada Shelby. Não só ela é a matriarca da família, como também cuida de toda a parte administrativa da organização criminosa, além de frequentemente servir como conselheira para as decisões de Thomas Shelby.
@@ -73,6 +73,7 @@
 
             <br><br><br><br><br><br><br>
 
+            <img class="imagemAda" src="./imagens/elenco/sophie.jpg" alt="imagem ada">
             <h2>Ada Shelby (Sophie Rundle)</h2>
             <p>
                 A irmã mais distante dos Shelby, Ada Thorne foi criada pela tia Polly juntamente com os irmãos, mas logo se afastou das atividades criminosas e até mudou o seu sobrenome após se envolver com o comunista Freddie Thorne, com quem teve um filho. Eventualmente, porém, ela volta e passa a comandar uma das frentes internacionais dos negócios da Família.
@@ -81,6 +82,7 @@
 
             <br><br><br><br><br><br><br>
 
+            <img class="imagemFinn" src="./imagens/elenco/Harry.jpg" alt="imagem finn">
             <h2>Finn Shelby (Harry Kirton)</h2>
             <p>
                 O último irmão Shelby é justamente o mais novo. Assim como os demais, Finn Shelby foi criado pela tia Polly, mas é impedido por Thomas e Arthur de se envolver demais com as atividades criminosas da família. Demora um tempo até que ele possa sequer participar de reuniões. Eventualmente, ele assume um cargo dentro dos negócios ilícitos dos irmãos, mas toma decisões questionáveis que terão bastante repercussões na temporada final da série.
@@ -89,6 +91,7 @@
 
             <br><br><br><br><br><br><br>
 
+            <img class="imagemGrace" src="./imagens/elenco/annabelle.jpg" alt="imagem grace">
             <h2>Grace Shelby (Annabelle Wallis)</h2>
             <p>
                 Ainda que Thomas Shelby seja um homem fechado, poucas mulheres conseguem se conectar com ele - e Grace Burgess é a principal. Parte fundamental do começo da série, ela começa a trabalhar como garçonete no bar da Família Shelby, como infiltrada da polícia. Com o objetivo de se aproximar de Thomas, os dois acabam se apaixonando, até que eventualmente se casam e têm um filho juntos.
@@ -97,6 +100,7 @@
 
             <br><br><br><br><br><br><br>
 
+            <img class="imagemLizzie" src="./imagens/elenco/natasha.jpg" alt="imagem lizzie">
             <h2>Lizzie Shelby (Natasha O'Keeffe)</h2>
             <p>
                 Outra das mulheres que consegue se envolver com Thomas Shelby é a prostituta Lizzie Stark, que atende o mafioso com certa frequência após ele retornar da guerra. Ela se junta à Família Shelby para trabalhar como secretária, e se envolve com John ao ponto de cogitarem um casamento. Quando tudo acaba dando errado, ela enfim se casa com Thomas Shelby, após a união anterior do protagonista terminar com consequências trágicas.
@@ -105,14 +109,16 @@
 
             <br><br><br><br><br><br><br>
 
+            <img class="imagemLinda" src="./imagens/elenco/kate.jpg" alt="imagem linda">
             <h2>Linda Shelby (Kate Phillips)</h2>
             <p>
                 Nenhuma das relações dos mafiosos é fácil, e Linda Shelby é um bom exemplo disso. Seu relacionamento com Arthur Shelby Jr. começa de forma bastante positiva, mas rapidamente se torna marcado por problemas quando ela tenta afastar o mafioso do restante de sua família.
                 A personagem é vivida por Kate Phillips, atriz britânica com papéis na série de Guerra e Paz, The Crown, O Alienista, e no filme de Downton Abbey.
             </p>
 
-            <br><br><br><br><br><br><br>
+            <br><br><br><br><br><br><br><br>
 
+            <img class="imagemMichael" src="./imagens/elenco/finn.jpg" alt="imagem michael">
             <h2>Michael Gray (Finn Cole)</h2>
             <p>
                 Polly pode ser vista como a matriarca dos Shelby, mas ela é apenas tia de Thomas e seus irmãos. O único filho que ela tem é Michael Gray, primo dos mafiosos que eventualmente passa a ajudar nos negócios da família. Para evitar conflitos com John Shelby, Michael eventualmente vai para os Estados Unidos para comandar a divisão norte-americana do ramo dos Shelby, o que causa ainda mais problemas quando ele perde todo o dinheiro da organização na crise de 1929.
@@ -121,6 +127,7 @@
 
             <br><br><br><br><br><br><br>
 
+            <img class="imagemGina" src="./imagens/elenco/anya.jpg" alt="imagem gina">
             <h2>Gina Gray (Anya Taylor-Joy)</h2>
             <p>
                 O tempo que Michael Gray passa nos Estados Unidos é bastante proveitoso, já que além de assumir responsabilidades, ele também conhece Gina Gray, com quem se casa e, em breve, terá um filho. Gina é refinada, e parece ser de uma família de elite, além de ser altamente manipuladora e cheia de segredos, criando rupturas dentro da Família Shelby e se estabelecendo como uma vilã para a temporada final.
@@ -129,6 +136,7 @@
 
             <br><br><br><br><br><br><br>
 
+            <img class="imagemAlfie" src="./imagens/elenco/tom.jpg" alt="imagem alfie">
             <h2>Alfie Solomons (Tom Hardy)</h2>
             <p>
                 Na busca por mais poder, os Peaky Blinders começam a bater cabeça com outras gangues, como os italianos. Buscando ajuda contra os mafiosos, Thomas Shelby usa o mantra do “inimigo do meu inimigo é meu amigo” é busca a ajuda de Alfie Solomons, líder de uma organização criminosa de judeus. Ao longo da série, os dois batem cabeça como rivais, mas também se ajudam como aliados e amigos.
@@ -137,6 +145,7 @@
 
             <br><br><br><br><br><br><br>
 
+            <img class="imagemJessie" src="./imagens/elenco/charlie.jpg" alt="imagem charlie">
             <h2>Jessie Eden (Charlie Murphy)</h2>
             <p>
                 Thomas Shelby só se envolve em relacionamentos que lhe tragam algum tipo de vantagem, e Jessie Eden é um desses exemplos. A operária é capaz de mobilizar os funcionários com facilidade, o que se torna muito valioso quando Thomas decide concorrer ao parlamento inglês. Jessie é manipulada a conquistar votos para o gângster, mas no processo acaba descobrindo muito sobre o passado, os traumas e vulnerabilidades de Thomas Shelby.
@@ -145,6 +154,7 @@
 
             <br><br><br><br><br><br><br>
 
+            <img class="imagemBen" src="./imagens/elenco/ben.jpg" alt="imagem ben">
             <h2>Ben Younger (Kingsley Ben-Adir)</h2>
             <p>
                 Sempre há algum oficial da lei na cola dos Peaky Blinders. Por um tempo, Ada Shelby foi perseguida por Ben Younger, agente que investigava a mafiosa sob a suspeita de ser uma comunista. Mais tarde, ele ainda fechou uma parceria de informação com Thomas Shelby, até o seu eventual assassinato.
@@ -153,6 +163,7 @@
 
             <br><br><br><br><br><br><br>
 
+            <img class="imagemAberama" src="./imagens/elenco/aidan.jpg" alt="imagem aberama">
             <h2>Aberama Gold (Aidan Gillen)</h2>
             <p>
                 Aberama Gold é um assassino de aluguel que ajuda a proteger a Família Shelby de impiedosos ataques dos mafiosos italianos. No meio de todo esse caos, ele se apaixona por Polly Gray, com quem eventualmente se casa, permanecendo com ela até a sua trágica morte.
@@ -161,6 +172,7 @@
 
             <br><br><br><br><br><br><br>
 
+            <img class="imagemBonnie" src="./imagens/elenco/jack.jpg" alt="imagem bonnie">
             <h2>Bonnie Gold (Jack Rowan)</h2>
             <p>
                 Aberama não trabalha sozinho, e realiza suas missões ao lado do filho, Bonnie Gold. O jovem é treinado em luta, e sonha em se tornar um lutador de boxe profissional - recebendo até incentivo de Thomas Shelby, como parte de uma negociação com Aberama. Infelizmente, o rapaz morre pelas mãos de Jimmy McCavern, o que desperta a ira de seu pai.
@@ -169,6 +181,7 @@
 
             <br><br><br><br><br><br><br>
 
+            <img class="imagemIsaiah" src="./imagens/elenco/jordan.jpg" alt="imagem isaiah">
             <h2>Isiah (Jordan Bolger/Daryl McCormack)</h2>
             <p>
                 A gangue dos Peaky Blinders é composta por vários criminosos, de todas as vivências. Isaiah Jesus é um garoto caribenho, filho do pastor Jeremiah Jesus. O rapaz é um dos parceiros de John Shelby e Michael Gray no crime.
@@ -177,14 +190,16 @@
 
             <br><br><br><br><br><br><br>
 
+            <img class="imagemJimmy" src="./imagens/elenco/brian.jpg" alt="imagem jimmy">
             <h2>Jimmy McCavern (Brian Gleeson)</h2>
             <p>
                 Uma das gangues que ameaça o reinado dos Peaky Blinders após a crise de 1929 são os Billy Boys, liderados por Jimmy McCavern. O escocês é o responsável por assassinar Bonnie Gold, comprando briga com a gangue rival e com Aberama.
                 Ele é vivido pelo irlandês Brian Gleeson, que teve papéis em filmes como Branca de Neve e o Caçador (2012), Assassin’s Creed (2016), Trama Fantasma (2017), entre outros.
             </p>
 
-            <br><br><br><br><br><br><br>
+            <br><br><br><br><br><br><br><br>
             
+            <img class="imagemMosley" src="./imagens/elenco/sam.jpg" alt="imagem mosley">
             <h2>Sam Clafin (Oswald Mosley)</h2>
             <p>
                 Inicialmente um aliado de Thomas Shelby, Oswald Mosley se mostra a maior ameaça aos Peaky Blinders quando se assume de vez um fascista, dando início à União Britânica dos Fascistas, um partido de extrema-direita em forte ascensão na Europa pré-Segunda Guerra Mundial. Igualmente carismático e perverso, ele cria uma verdadeira gangue ao conquistar legiões de seguidores de sua ideologia.
